# simplex-python

./: .gitignore  .windsurfrules  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  test_integration.py
api/client/: index.html
api/users/: index.html
bk/clients/: __init__.py  connections.py  groups.py  users.py
bk/commands/: database.py  files.py  groups.py  messages.py  users.py
bk/responses/: chats.py  database.py  files.py  messages.py  users.py
docs/: index.md
docs/api/: client.md  users.md
examples/: account_example.py  simple_bot_example.py  squaring_bot.py  tester.py  tester_agent.db  tester_chat.db
scripts/: doc_export.py  run_doc.py  simplex-api-tester.py  socket_doc.py
scripts/test_results/: simplex_api_test_results_20250503_094255.md  simplex_api_test_results_20250503_095300.md
search/: search_index.json
simplex-python/: client.py  transport.py
simplex-python/models/: chat.py  message.py
simplex-python/responses/: chat.py  error.py
simplex_python/: account.py  client.py  client_errors.py  command.py  commands.py  enums.py  errors.py  queue.py  response.py  responses.py  transport.py
simplexbot/: base.py  client.py  command.py  queue.py  response.py  transport.py  user.py  utils.py
simplexbot/models/: base.py  (+2 more)
site/: 404.html  index.html  sitemap.xml
test_results/: simplex_api_test_results_20250503_095340.md  simplex_api_test_results_20250503_095856.md
tests/: conftest.py  test_client.py  test_command.py  test_integration_chat.py  test_queue.py  test_response.py  test_transport.py
(+66 files in other folders)
