[project]
name = "simplex_python"
version = "0.1.0"
description = "A python SDK using websockets for Simplex Chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
