[project]
name = "simplex_python"
version = "0.1.0"
description = "A python SDK using websockets for Simplex Chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simplex_python"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
